--- a/PiaGOApp/app/src/main/res/layout/activity_piago_main_screen.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_piago_main_screen.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".PiagoMainScreen">
     <ImageView
+        android:layout_marginTop="20dp"
         android:id="@+id/mainscreen_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,15 +19,26 @@
         android:id="@+id/mainscreen_button_jam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:textStyle="bold"
         android:padding="10dp"
-        android:text="Start Playing"
+        android:text="Start Playing!"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainscreen_logo"
+        app:layout_constraintTop_toBottomOf="@id/text_home"
         android:onClick="launchJam"
         android:background="@drawable/button_piago_main"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Welcome on the home screen of Piago, the Piano on the Go. Piago is a Finnish and Belgian collaboration, with one target in mind: To give you the ability to play a Keyboard wherever you want, whenever you want."
+        app:layout_constraintTop_toBottomOf="@id/mainscreen_logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="20dp"
+        android:id="@+id/text_home"/>
 
 
 
