--- a/PiaGOApp/app/src/main/res/layout/activity_play_piago.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_play_piago.xml
@@ -21,12 +21,12 @@
         android:background="@drawable/button_piago_main"
         android:onClick="playSoundNow"
         android:layout_marginLeft="30dp"
-        android:text="Play sound"
+        android:text="Debug"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/mainscreen_logo"
         app:layout_constraintStart_toStartOf="parent" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text=" Preview Song "
         android:textStyle="bold"
@@ -34,32 +34,55 @@
         android:id="@+id/button_preview"
         android:onClick="previewSong"
         android:background="@drawable/button_piago_main"
-        app:layout_constraintStart_toEndOf="@+id/button_start_song"
+        app:layout_constraintLeft_toRightOf="@id/button_change_instrument"
         app:layout_constraintTop_toTopOf="parent"/>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Start Song"
         android:id="@+id/button_start_song"
-        android:layout_margin="5dp"
+        android:layout_marginTop="5dp"
         android:textStyle="bold"
         android:onClick="startSong"
         android:background="@drawable/button_piago_main"
-        app:layout_constraintStart_toEndOf="@+id/learn_textView"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="@id/button_preview"
+        app:layout_constraintTop_toBottomOf="@id/button_preview"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Piano"
         android:id="@+id/button_change_instrument"
-        android:layout_marginTop="55dp"
         android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="5dp"
         android:textStyle="bold"
         android:onClick="changeInstrument"
         android:background="@drawable/button_piago_main"
-        app:layout_constraintStart_toEndOf="@+id/learn_textView"
+        app:layout_constraintLeft_toRightOf="@+id/learn_textView"
         app:layout_constraintTop_toTopOf="parent"
 
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Song"
+        android:id="@+id/button_change_song"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        android:onClick="changeSong"
+        android:background="@drawable/button_piago_main"
+        app:layout_constraintLeft_toLeftOf="@+id/button_change_instrument"
+        app:layout_constraintTop_toBottomOf="@+id/button_change_instrument"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="Active song: Father Jacob"
+        android:textSize="20dp"
+        android:id="@+id/textView_active_song"
         />
     <Button
         android:layout_width="wrap_content"
@@ -85,18 +108,18 @@
         />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text=" Octave Down "
-        android:layout_margin="5dp"
+        android:layout_marginTop="5dp"
         android:id="@+id/button_octave_lower"
         android:textStyle="bold"
         android:onClick="octaveLower"
         android:background="@drawable/button_piago_main"
-        app:layout_constraintStart_toEndOf="@+id/button_octave_higher"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="@id/button_octave_higher"
+        app:layout_constraintTop_toBottomOf="@id/button_octave_higher"/>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="  Octave Up  "
         android:id="@+id/button_octave_higher"
@@ -104,13 +127,15 @@
         android:layout_margin="5dp"
         android:onClick="octaveHigher"
         android:background="@drawable/button_piago_main"
-        app:layout_constraintStart_toEndOf="@+id/learn_textView"
+        app:layout_constraintLeft_toRightOf="@id/button_change_instrument"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/learn_textView"
         android:layout_width="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         android:text="Learn"
         android:textSize="25dp"
@@ -122,10 +147,11 @@
         android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/mainscreen_logo"
+        app:layout_constraintLeft_toLeftOf="@id/learn_textView"
+        app:layout_constraintRight_toRightOf="@id/learn_textView"
         app:layout_constraintTop_toBottomOf="@id/learn_textView"
         android:textStyle="bold"
-        android:textOff="Jam"
+        android:textOff="Regular"
         android:textOn="Learn"
         />
 
@@ -513,7 +539,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:id="@+id/container1">
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
